Fri Dec  5 00:28:12 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstrackeditor.[hc]: disabled code depending on BstRackItem.

	* beast-gtk/bstracktable.[hc]: disabled code depending on BstRackItem.

	* beast-gtk/bstrackitem.[hc]: derive from GxkRackItem. removed
	controller handling code.

	* beast-gtk/bstsupershell.c: added rack-view notebook page to SynthNets.

	* beast-gtk/dialogs/gadgets-beast.xml: added rack-view GUI description.

	* beast-gtk/dialogs/gadgets-standard.xml: support rack-table and
	rack-item. fixed up some button properties.

	* beast-gtk/gxk/gxkgadget.c: support rack table and item types.

	* beast-gtk/gxk/gxkrackeditor.c: fixed up return value for button
	presses. removed auto cover/uncover upon editing edit mode.

Sun Nov 30 12:51:05 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkracktable.[hc]:
	(gxk_rack_table_style_set): set a lower boundary of 8 pixels to cell size
	requests.
	(gxk_rack_table_attach): new function to allow direct placement of
	non rack-items.
	(gxk_rack_table_cover_up): new function to add covers to empty regions.
	(gxk_rack_table_uncover): remove covers from empty regions.

	* beast-gtk/gxk/gxkrackcovers.c: changed license to LGPL.
	adapted code to GxkRackTable API, added comments.

	* beast-gtk/gxk/gxkrackeditor.[hc]: added gxk_rack_table_destroy_editor()
	for proper shutdown.

Sun Nov 30 16:15:40 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkrackcovers.c: CVS copied here.

Sun Nov 30 02:44:27 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkrackeditor.[hc]: shrink resize anchors to 3/4 of the
	cell size. moved remaining editing fields from GxkRackTable into
	GxkRackEditor.
	(rack_table_update_rframe): remove corner checks.
	(gxk_rack_table_handle_button_press): merged resizing and movement
	logic. do movement without extra dnd window. added simple logic
	for corner detection.
	(rack_table_editor_drag_corner): added movement logic, added boundary